--- a/package.yml
+++ b/package.yml
@@ -1,5 +1,5 @@
 package: simpleshop
-version: '0.1'
+version: '1.0'
 author: FriendsOfREDAXO
 debug_email: dev@kreatif.it
 compile: 1
@@ -25,4 +25,5 @@ requires:
     redaxo: '>=5.2'
     packages:
         yform: '>=1.1-beta1'
+        yform/manager: '>=2.0'
         sprog: '>=1.0.0-beta4'
