--- a/package.yml
+++ b/package.yml
@@ -1,5 +1,5 @@
 package: simpleshop
-version: '3.0'
+version: '3.1'
 author: FriendsOfREDAXO
 debug_email: dev@kreatif.it
 compile: 0
@@ -28,7 +28,7 @@ page:
 requires:
     redaxo: '>=5.3'
     packages:
-        yform: '^2.3'
-        yform/manager: '^2.3'
+        yform: '>=2.3,<4'
+        yform/manager: '>=2.3,<4'
         sprog: '^1.0'
-        kreatif: '^3.1'
+        kreatif: '>=3.1,<5'
