default shipping costs for countries added

--- a/plugins/default_shipping/package.yml
+++ b/plugins/default_shipping/package.yml
@@ -1,3 +1,9 @@
 package: simpleshop/default_shipping
 version: '1.0'
 author: FriendsOfREDAXO
+
+page:
+    title: Shipping
+    perm: shop[default_shipping]
+    subpages:
+        settings: { title: translate:settings, hidden: true }
