--- a/package.yml
+++ b/package.yml
@@ -16,6 +16,9 @@ page:
         settings:
             title: translate:settings
             perm: shop[settings]
+        settings_adv:
+            title: translate:label.advanced_settings
+            perm: shop[advanced_settings]
         variants:
             title: translate:label.variants
             hidden: true
