--- a/package.yml
+++ b/package.yml
@@ -1,5 +1,5 @@
 package: simpleshop
-version: '4.2.10'
+version: '4.3.0'
 author: FriendsOfREDAXO
 debug_email: dev@kreatif.it
 compile: 0
@@ -36,4 +36,4 @@ requires:
         yform: '>=2.3,<4'
         yform/manager: '>=2.3,<4'
         sprog: '^1.0'
-        kreatif: '>=4.3,<5'
+        kreatif: '>=4.10.0'
